# meilibridge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  config.example.yaml  deny.toml  tarpaulin.toml
.github/workflows/: ci.yml  docker-publish.yml  pr-checks.yml  release.yml
demo/: README.md  compose.yaml  start.sh  stop.sh
demo/config/: meilibridge.yaml
demo/postgres/: Dockerfile
demo/sql/: bulk_insert.sql  init.sql  pg_cron_jobs.sql
docker/: .dockerignore  Dockerfile  README.md  compose.yaml  docker-build.sh  docker-compose.override.example.yml  docker-entrypoint.sh  docker-push.sh  postgres-init.sql
docs/: api-development.md  cdc-operations.md  configuration-architecture.md  getting-started.md
monitoring/: alerts.yml  grafana-dashboard.json
src/: error.rs  lib.rs  main.rs
src/api/: cache_handlers.rs  diagnostics.rs  handlers.rs  mod.rs  server.rs  state.rs
src/api/middleware/: metrics.rs  mod.rs
src/checkpoint/: manager.rs  mod.rs  storage.rs
src/config/: api.rs  error_handling.rs  loader.rs  logging.rs  meilisearch.rs  mod.rs  monitoring.rs  performance.rs  pipeline.rs  redis.rs  source.rs  sync_task.rs  validation.rs
src/delivery/: checkpoint.rs  deduplication.rs  mod.rs  transaction.rs
src/destination/: adapter.rs  circuit_breaker.rs  mod.rs
src/destination/meilisearch/: adapter.rs  batch_processor.rs  client.rs  mod.rs  protected_client.rs
src/dlq/: mod.rs  redis_storage.rs
src/error/: retry.rs
src/health/: mod.rs
src/metrics/: mod.rs
src/models/: event.rs  mod.rs  progress.rs  runtime.rs  stream_event.rs
src/pipeline/: adaptive_batching.rs  at_least_once_helpers.rs  backpressure.rs  cdc_coordinator.rs  exactly_once_helpers.rs  filter.rs  mapper.rs  memory_monitor.rs  mod.rs  orchestrator.rs  parallel_processor.rs  soft_delete.rs  startup_check.rs  streaming_processor.rs  transformer.rs
src/recovery/: circuit_breaker.rs  dead_letter.rs  error_handler.rs  mod.rs  retry.rs  retry_v2.rs
src/source/: adapter.rs  mod.rs
src/source/postgres/: adapter.rs  connection.rs  full_sync.rs  mod.rs  pgoutput.rs  retry_helper.rs  statement_cache.rs  types.rs  wal_consumer.rs
src/sync/: mod.rs  task_manager.rs
tests/: README.md  integration.rs  unit.rs
tests/common/: mod.rs
tests/common/fixtures/: mod.rs
tests/common/helpers/: mod.rs
tests/common/mocks/: mod.rs
tests/e2e/: mod.rs
tests/e2e/cdc_flow/: mod.rs
tests/e2e/failover/: mod.rs
tests/integration/: mod.rs
tests/unit/: mod.rs
(+63 files in other folders)
